<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>trustytrojan</groupId>
	<artifactId>discordjs4j</artifactId>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.java-websocket/Java-WebSocket -->
		<dependency>
			<groupId>org.java-websocket</groupId>
			<artifactId>Java-WebSocket</artifactId>
			<version>1.5.3</version>
		</dependency>

		<!-- https://jitpack.io/#trustytrojan/java-signals -->
		<dependency>
			<groupId>com.github.trustytrojan</groupId>
			<artifactId>java-signals</artifactId>
			<version>7c383b79a2</version>
		</dependency>

		<!-- https://jitpack.io/#trustytrojan/simple-json -->
		<dependency>
			<groupId>com.github.trustytrojan</groupId>
			<artifactId>simple-json</artifactId>
			<version>62dbc2a954</version>
		</dependency>
	</dependencies>

</project>